<resources>
  <string name="app_name">Hábitos</string>
  <string name="title_activity_main">Meus Hábitos</string>
  <string name="title_habit_list">Lista de Hábitos</string>

  <!-- Content Descriptions and Accessibility Text -->
  <string name="accessibility_add">Adicionar Hábito</string>
  <string name="title_habit_form">Configurar Hábito</string>
  <string name="habit_title">Título do Hábito</string>
  <string name="monday">Segunda-Feira</string>
  <string name="tuesday">Terça-Feira</string>
  <string name="wednesday">Quarta-Feira</string>
  <string name="thursday">Quinta-Feira</string>
  <string name="friday">Sexta-Feira</string>
  <string name="saturday">Sábado</string>
  <string name="sunday">Domingo</string>
  <string name="save">Salvar</string>
  <string name="nameapp">Jupiter</string>
  <string name="buttonAcesso">Entrar</string>
  <string name="email">Email</string>
  <string name="senha">Senha</string>
  <string name="cadastro">Não tem conta? Cadastrar</string>
  <string name="categoria">Categoria</string>
</resources>
